@@ -17,6 +17,7 @@ travis_status = 1
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 irc           = irc://irc.perl.org/#native
+test2_v0      = 1
 
 diag_preamble = | $post_diag = sub {
 diag_preamble = |   require Alien::curl;
@@ -31,12 +32,7 @@ diag_preamble = | };
 [AlienBuild]
 :version = 0.15
 
-[RemovePrereqs]
-remove = strict
-remove = warnings
-remove = base
-
-;[Prereqs]
+[Author::Plicease::Core]
 
 [Author::Plicease::Upload]
 cpan = 1
