@@ -1,7 +1,7 @@
-use strict;
-use warnings;
+use Test2::V0 -no_srand => 1;
 use Config;
-use Test::More tests => 1;
+
+eval q{ require Test::More };
 
 # This .t file is generated.
 # make changes instead to dist.ini
@@ -14,10 +14,8 @@ $modules{$_} = $_ for qw(
   Alien::Build
   Alien::Build::MM
   ExtUtils::MakeMaker
-  IPC::Cmd
-  Test2::Suite
+  Test2::V0
   Test::Alien
-  Test::More
 );
 
 $post_diag = sub {
@@ -72,7 +70,7 @@ if(@keys > 0)
 
 diag sprintf $format, 'perl ', $];
 
-foreach my $module (@modules)
+foreach my $module (sort @modules)
 {
   if(eval qq{ require $module; 1 })
   {
@@ -94,3 +92,4 @@ if($post_diag)
 
 spacer;
 
+done_testing;
