@@ -1,12 +1,27 @@
-use Test2::Bundle::Extended;
+use Test2::V0 -no_srand => 1;
 use Test::Alien 0.11;
 use Alien::curl;
 
 alien_ok 'Alien::curl';
 
-run_ok(['curl', '--version'])
-  ->success
-  ->out_like(qr/curl/);
+my $run = run_ok(['curl', '--version']);
+$run->success;
+$run->out_like(qr/curl/);
+
+is(
+  do {
+    my($protocols) = $run->out =~ /^Protocols:\s*(.*)\s*$/m;
+    my %protocols = map { $_ => 1 } split /\s+/, $protocols;
+    \%protocols,
+  },
+  hash {
+    field http  => T();
+    field https => T();
+    field ftp   => T();
+    etc;
+  },
+  'protocols supported incudes: http, https, and ftp',
+) || diag $run->out;
 
 xs_ok(
   do { local $/; <DATA> },
